<resources>
    <string name="app_name">Shop Clothes Inventory</string>
    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_virtual_product">Insert Virtual Product</string>

    <string name="product_type"> Product Type</string>

    <string name="product_amount"> Product Amount</string>

    <string name="product_price"> Product Price</string>

    <string name="hint_price">Enter Price</string>

    <string name="hint_item_name">Write item name</string>

    <string name="hint_amount">Enter Amount</string>

    <string name="hint_size">What Size</string>

    <string name="hint_name_supplier">Write Supplier Name</string>

    <string name="hint_supplier_phone">Write Supplier Phone</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Label for size information in the editor [CHAR LIMIT=30] -->
    <string name="category_size">Size</string>
    <!-- Label for dropdown menu option if the item size is Small [CHAR LIMIT=20] -->
    <string name="size_small">Small</string>

    <!-- Label for dropdown menu option if the item size is Medium [CHAR LIMIT=20] -->
    <string name="size_medium">Medium</string>

    <!-- Label for dropdown menu option if the item size is Large [CHAR LIMIT=20] -->
    <string name="size_large">Large</string>
    <!-- Label for dropdown menu option if the item size is XLarge [CHAR LIMIT=20] -->
    <string name="size_xlarge">XLarge</string>

    <string name="editor_activity_title_new_item">Add a new product</string>

    <string name="name_supplier">Supplier Name</string>

    <string name="phone_supplier">Supplier Phone</string>
    <!-- Title text for the empty view, which describes the fashion image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It is a bit lonely here</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product[CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a clothing item</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product was updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current productet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Label for the product's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_supplier">Unknown supplier</string>

    <string name="no_stock_supply">There is no product in stock</string>

    <string name="sell">Sell</string>
    <string name="name_product">Name of the product</string>
    <string name="price">Price:</string>
    <string name="item_price">50</string>
    <string name="amount">Amount:</string>
    <string name="_23">23</string>
    <string name="all_field_required">No null values are accepted</string>
    <string name="price_greater_then_zero">Price must have positive values</string>

</resources>
